objects/Contract_Line__c.object
<CustomObject>
    <description>Order Management</description>
    <fields>
        <fullName>Add_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add-On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Bi-annual</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>One-off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Order</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Contract_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_Day_Amount__c</fullName>
        <formula>IF(  ISPICKVAL(Price_per__c , &quot;One-off&quot;) , Price__c /  Duration_days__c,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration Day Amount</label>
        <precision>18</precision>
        <scale>12</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_days__c</fullName>
        <formula>(End_Date__c -  Start_Date__c) + 1</formula>
        <label>Duration days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Equivalent_Units__c</fullName>
        <label>Equivalent Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exclude_from_ACV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from ACV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IM_Lookup_Code__c</fullName>
        <label>Order Line Item</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Order_Method__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>360 Platform Set up</fullName>
                </value>
                <value>
                    <fullName>360 Subscription</fullName>
                </value>
                <value>
                    <fullName>Advisory Services Subscription</fullName>
                </value>
                <value>
                    <fullName>AM Aptitude (In Arrears)</fullName>
                </value>
                <value>
                    <fullName>AM Coding (In Arrears)</fullName>
                </value>
                <value>
                    <fullName>AM Generic (In Arrears)</fullName>
                </value>
                <value>
                    <fullName>AM Language (In Arrears)</fullName>
                </value>
                <value>
                    <fullName>AM Personal &amp; Behavioural (In Arrears)</fullName>
                </value>
                <value>
                    <fullName>AM Pool Hiring (In Arrears)</fullName>
                </value>
                <value>
                    <fullName>AM Proctoring (In Arrears)</fullName>
                </value>
                <value>
                    <fullName>AM Product Subscription</fullName>
                </value>
                <value>
                    <fullName>AM Professional Services</fullName>
                </value>
                <value>
                    <fullName>AM Skills: Analytics (In Arrears)</fullName>
                </value>
                <value>
                    <fullName>AM Skills: Banking and Financial Serv (In Arrears)</fullName>
                </value>
                <value>
                    <fullName>AM Skills: Customer Service, Contact Center and BPO (In Arrears)</fullName>
                </value>
                <value>
                    <fullName>AM Skills: Engineering (In Arrears)</fullName>
                </value>
                <value>
                    <fullName>AM Skills: Finance and Accounting (In Arrears)</fullName>
                </value>
                <value>
                    <fullName>AM Skills: Healthcare, Pharma and Life Sciences (In Arrears)</fullName>
                </value>
                <value>
                    <fullName>AM Skills: Human Resources, Marketing and Operations (In Arrears)</fullName>
                </value>
                <value>
                    <fullName>AM Skills: MS Office (In Arrears)</fullName>
                </value>
                <value>
                    <fullName>AM Skills: Sales and Business Development (In Arrears)</fullName>
                </value>
                <value>
                    <fullName>AM Skills: Sciences (In Arrears)</fullName>
                </value>
                <value>
                    <fullName>AM Skills: Technology (In Arrears)</fullName>
                </value>
                <value>
                    <fullName>AM Skills: Tourism and Hospitality (In Arrears)</fullName>
                </value>
                <value>
                    <fullName>AM Video (In Arrears)</fullName>
                </value>
                <value>
                    <fullName>Application Analytics Subscription</fullName>
                </value>
                <value>
                    <fullName>Bureau</fullName>
                </value>
                <value>
                    <fullName>Candidate Support – Bronze</fullName>
                </value>
                <value>
                    <fullName>Candidate Support for Subscription</fullName>
                </value>
                <value>
                    <fullName>Candidate Support –  Gold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoicing_Schedule__c</fullName>
        <label>Invoicing Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>25% Upfront</fullName>
                </value>
                <value>
                    <fullName>100% Upfront</fullName>
                </value>
                <value>
                    <fullName>Invoice per milestone</fullName>
                </value>
                <value>
                    <fullName>Upon completion</fullName>
                </value>
                <value>
                    <fullName>Special Invoicing Instructions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limit_Value__c</fullName>
        <description>For Limited Subscription sales this is the value that the customer is limited to (per &apos;Price per&apos; field)</description>
        <inlineHelpText>Enter limit applicable to Limited Subscription contracts</inlineHelpText>
        <label>Limit Value</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Description__c</fullName>
        <label>Line Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Method__c</fullName>
        <label>Order Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RI</fullName>
                </value>
                <value>
                    <fullName>SOE</fullName>
                </value>
                <value>
                    <fullName>T&amp;E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Order Line</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Original_Order__c</field>
                <operation>equals</operation>
                <valueField>Contract_Line__c.Contract__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contract_Line__c</referenceTo>
        <relationshipLabel>Variation Order Lines</relationshipLabel>
        <relationshipName>Order_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Order</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Order Line (Original Order)</relationshipLabel>
        <relationshipName>Order_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_number__c</fullName>
        <label>PO number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Proposition__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Graduate Essential</fullName>
                </value>
                <value>
                    <fullName>Graduate Advanced</fullName>
                </value>
                <value>
                    <fullName>Graduate Ultimate</fullName>
                </value>
                <value>
                    <fullName>Volume Essential</fullName>
                </value>
                <value>
                    <fullName>Volume Advanced</fullName>
                </value>
                <value>
                    <fullName>Volume Ultimate</fullName>
                </value>
                <value>
                    <fullName>HiPo</fullName>
                </value>
                <value>
                    <fullName>Digital Readiness</fullName>
                </value>
                <value>
                    <fullName>Talent Audit</fullName>
                </value>
                <value>
                    <fullName>Technology Hiring Essential</fullName>
                </value>
                <value>
                    <fullName>Technology Hiring Advanced</fullName>
                </value>
                <value>
                    <fullName>Technology Hiring Ultimate</fullName>
                </value>
                <value>
                    <fullName>Talent Mobility Essential</fullName>
                </value>
                <value>
                    <fullName>Talent Mobility Advanced</fullName>
                </value>
                <value>
                    <fullName>Talent Mobility Ultimate</fullName>
                </value>
                <value>
                    <fullName>RemoteWorkQ Essential</fullName>
                </value>
                <value>
                    <fullName>RemoteWorkQ Advanced</fullName>
                </value>
                <value>
                    <fullName>RemoteWorkQ Ultimate</fullName>
                </value>
                <value>
                    <fullName>Bespoke</fullName>
                </value>
                <value>
                    <fullName>Not applicable – variation/royalties</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Brainbench</fullName>
                </value>
                <value>
                    <fullName>iAssess</fullName>
                </value>
                <value>
                    <fullName>MFS</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>Nacho</fullName>
                </value>
                <value>
                    <fullName>Precise Fit Modules</fullName>
                </value>
                <value>
                    <fullName>S2P</fullName>
                </value>
                <value>
                    <fullName>SODA</fullName>
                </value>
                <value>
                    <fullName>Sunstone</fullName>
                </value>
                <value>
                    <fullName>Talent Central</fullName>
                </value>
                <value>
                    <fullName>Valtera</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Line Price</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_per__c</fullName>
        <label>Price per</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unit</fullName>
                </value>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Sitting</fullName>
                </value>
                <value>
                    <fullName>Job</fullName>
                </value>
                <value>
                    <fullName>One-off</fullName>
                </value>
                <value>
                    <fullName>Assessment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>ProjectObject__c</referenceTo>
        <relationshipName>Order_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposition__c</fullName>
        <label>Proposition</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Graduate Hiring</fullName>
                </value>
                <value>
                    <fullName>Volume Hiring</fullName>
                </value>
                <value>
                    <fullName>Talent Transformation</fullName>
                </value>
                <value>
                    <fullName>Technology Hiring</fullName>
                </value>
                <value>
                    <fullName>Talent Mobility</fullName>
                </value>
                <value>
                    <fullName>RemoteWorkQ</fullName>
                </value>
                <value>
                    <fullName>Sales Hiring</fullName>
                </value>
                <value>
                    <fullName>Managerial Hiring</fullName>
                </value>
                <value>
                    <fullName>Talent Development</fullName>
                </value>
                <value>
                    <fullName>Not applicable – variation/royalties</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_System_Type__c</fullName>
        <label>Related System Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Legacy Soda</fullName>
                </value>
                <value>
                    <fullName>Legacy S2P</fullName>
                </value>
                <value>
                    <fullName>Legacy Other</fullName>
                </value>
                <value>
                    <fullName>TalentCentral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Running_Total__c</fullName>
        <description>This field will be sum of price on original order line and price of related/linked variation order lines.</description>
        <label>Running Total</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>S2P_Reference__c</fullName>
        <label>S2P Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope_Management__c</fullName>
        <label>Scope Management</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-hire assessments &amp; outputs</fullName>
                </value>
                <value>
                    <fullName>Post-hire assessments &amp; outputs</fullName>
                </value>
                <value>
                    <fullName>Specific solutions (eg. High Potential)</fullName>
                </value>
                <value>
                    <fullName>Job levels (eg.Supervisor)</fullName>
                </value>
                <value>
                    <fullName>Departments (eg. Call Centre)</fullName>
                </value>
                <value>
                    <fullName>Business divisions (eg. Operations)</fullName>
                </value>
                <value>
                    <fullName>Locations (eg. Rome office)</fullName>
                </value>
                <value>
                    <fullName>Single country / language</fullName>
                </value>
                <value>
                    <fullName>Multiple countries / languages</fullName>
                </value>
                <value>
                    <fullName>Global / all languages</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scoped_CPS_days__c</fullName>
        <label>Scoped CPS days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scoped_LPS_days__c</fullName>
        <label>Scoped LPS days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Detail_ID__c</fullName>
        <inlineHelpText>Legacy cross reference only, not required for new contracts</inlineHelpText>
        <label>Service Detail ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_of_PS_Scoping__c</fullName>
        <inlineHelpText>Please use Other Existing Pricing Calculator for Enterprise Leadership, Hipo. Use None for budget dump.</inlineHelpText>
        <label>Source of PS Scoping</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E2E Scoping Tool</fullName>
                </value>
                <value>
                    <fullName>Other Existing Pricing Calculator</fullName>
                </value>
                <value>
                    <fullName>Other Scoping Template</fullName>
                </value>
                <value>
                    <fullName>None Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>System_Client_ID__c</fullName>
        <label>System Client ID</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Status__c</fullName>
        <formula>text(Contract__r.S2P_Reference_Required__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage_Allowance__c</fullName>
        <label>Usage Allowance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Capped</fullName>
                </value>
                <value>
                    <fullName>Uncapped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Usage_Cap__c</fullName>
        <inlineHelpText>Enter defined cap limit per Basis of Fees.  If uncapped subscription, provide Annual usage estimation.</inlineHelpText>
        <label>Usage Cap or Estimation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Estimate_Type__c</fullName>
        <label>Basis of Fees</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Units</fullName>
                </value>
                <value>
                    <fullName>Candidates</fullName>
                </value>
                <value>
                    <fullName>Assessments and Reports</fullName>
                </value>
                <value>
                    <fullName>Full-Time Equivalents (FTEs)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Usage_Estimate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Usage Estimate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Variation_Order__c</fullName>
        <formula>Contract__r.Variation_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variation Order</label>
        <type>Text</type>
    </fields>
    <label>Order Line</label>
    <listViews>
        <fullName>All_Orders</fullName>
        <columns>NAME</columns>
        <columns>Order_Method__c</columns>
        <columns>Project__c</columns>
        <columns>Contract__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract__c</field>
            <operation>equals</operation>
            <value>00154766</value>
        </filters>
        <label>All Orders</label>
    </listViews>
    <nameField>
        <displayFormat>CLN{0000000}</displayFormat>
        <label>Order Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Currency_Should_Match_Order_Currency</fullName>
        <active>true</active>
        <description>Order Line currency must be same as related order currency.</description>
        <errorConditionFormula>IF(
NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)),
NOT(TEXT(CurrencyIsoCode) = TEXT( Contract__r.CurrencyIsoCode )),
false)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Order Line currency must be same as related order currency.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EndDatePastStartDate</fullName>
        <active>true</active>
        <description>End Date should not be on or before Start Date.</description>
        <errorConditionFormula>IF(NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)),IF( End_Date__c - Start_Date__c &lt;=0 , TRUE, FALSE),false)</errorConditionFormula>
        <errorMessage>End Date should not be on or before Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EndDateStartDateMandatoryonSubscription</fullName>
        <active>true</active>
        <description>Start Date and End Date are mandatory if the Order Line Item is Product Subscription, 360 Subscription, Advisory Services Subscription, Managed Services for Subscription, Sunstone Analytics Subscription or Candidate Support for Subscription.</description>
        <errorConditionFormula>IF(NOT(CONTAINS($Profile.Name,&apos;System Admin&apos;)),
IF( AND(OR(CONTAINS(Text(IM_Lookup_Code__c),&apos;Subscription&apos;),ISPICKVAL( IM_Lookup_Code__c , &quot;ODUNITSUBSCRIPT&quot;),ISPICKVAL( IM_Lookup_Code__c , &quot;Legacy Product - Licence&quot;),ISPICKVAL( IM_Lookup_Code__c , &quot;Leader Edge License&quot;),ISPICKVAL( IM_Lookup_Code__c , &quot;Precise Fit License&quot;)) , OR( ISBLANK(Start_Date__c),ISBLANK(End_Date__c))), True, False),
false)</errorConditionFormula>
        <errorMessage>Start Date and End Date are mandatory if the Order Line Item is a Subscription value or &apos;Legacy Product – Licence&apos; or &apos;Leader Edge License&apos; or &apos;Precise Fit License&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Leader_Edge_License_and_Precise_Fit_Lice</fullName>
        <active>true</active>
        <description>Leader Edge License &amp; Precise Fit License will act as subscription line items and Basis of Fees, Usage Cap or Estimation will become mandatory.</description>
        <errorConditionFormula>(
	ISBLANK(Usage_Estimate_Type__c) 
	|| ISBLANK(Usage_Cap__c)
) 
&amp;&amp; 
(
	Text(IM_Lookup_Code__c) == &apos;Leader Edge License&apos; 
	|| Text(IM_Lookup_Code__c) == &apos;Precise Fit License&apos; 
	
)</errorConditionFormula>
        <errorMessage>Basis of fees &amp; Usage Cap or Estimation are mandatory if Order Line item is Leader Edge License OR Precise Fit License.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MandatoryInvoiceschedulewithOrderMethod</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Text( Invoicing_Schedule__c )) &amp;&amp; Text( Order_Method__c ) == &apos;T&amp;E&apos;</errorConditionFormula>
        <errorDisplayField>Invoicing_Schedule__c</errorDisplayField>
        <errorMessage>&apos;Invoicing schedule’ must be selected when Order method equals &quot;T&amp;E&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_5_Fields_on_OrdrLineItem_value</fullName>
        <active>true</active>
        <errorConditionFormula>(ISBLANK(Text(Usage_Allowance__c)) || ISBLANK( Text(Platform__c)) || ISBLANK(Usage_Estimate_Type__c) || ISBLANK(Usage_Cap__c) || ISBLANK(Equivalent_Units__c)) &amp;&amp; (Text(IM_Lookup_Code__c) == &apos;Product Subscription&apos; || Text(IM_Lookup_Code__c) == &apos;AM Product Subscription&apos; || Text(IM_Lookup_Code__c) == &apos;Units in advance&apos; || Text(IM_Lookup_Code__c) == &apos;Units in arrears&apos; || Text(IM_Lookup_Code__c) == &apos;Wardhead: Block (In Advance)&apos; || Text(IM_Lookup_Code__c) == &apos;Wardhead: Embed (In Arrears)&apos; || Text(IM_Lookup_Code__c) == &apos;Wardhead: Capped Subscription&apos; || Text(IM_Lookup_Code__c) == &apos;Wardhead: Uncapped Subscription&apos;||
Text(IM_Lookup_Code__c) == &apos;RemoteWorkQ - In Advance&apos; || Text(IM_Lookup_Code__c) == &apos;RemoteWorkQ - Limited Subscription&apos; || Text(IM_Lookup_Code__c) == &apos;RemoteWorkQ - Unlimited Subscription&apos; || Text(IM_Lookup_Code__c) == &apos;RemoteWorkQ - In Arrears&apos; || Text(IM_Lookup_Code__c) == &apos;Virtual AC/DC - Limited Subscription&apos;||
Text(IM_Lookup_Code__c) == &apos;SHL Experiences Subscription&apos;)</errorConditionFormula>
        <errorMessage>Basis of fees, Usage Allowance, Usage Cap or Estimation, Platform and Equivalent Units is mandatory if Order Line item is Product Subscription OR Units In Advance OR Units In Arrears.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OrginalOrderDoNotMatch</fullName>
        <active>true</active>
        <description>Selected original order do not match with order\&apos;s original order.</description>
        <errorConditionFormula>AND( Original_Order__c !=&apos;&apos;,
 Contract__r.Original_Order__c != Original_Order__c )</errorConditionFormula>
        <errorDisplayField>Original_Order__c</errorDisplayField>
        <errorMessage>Selected original order do not match with order\&apos;s original order.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Platform_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND( ISPICKVAL(IM_Lookup_Code__c,&apos;Site set up&apos;),(ISPICKVAL(Platform__c,&apos;&apos;))),
AND( ISPICKVAL(IM_Lookup_Code__c,&apos;Sunstone Analytics Subscription&apos;),(ISPICKVAL(Platform__c,&apos;&apos;)))
)</errorConditionFormula>
        <errorDisplayField>Platform__c</errorDisplayField>
        <errorMessage>Platform is Mandatory for the value that you have selected in Order Line Item.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SourcePSScopingfieldMandatorywithIMcode</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Text(Source_of_PS_Scoping__c)) &amp;&amp; (Text(IM_Lookup_Code__c) == &apos;Consulting&apos; || Text(IM_Lookup_Code__c) == &apos;Training - In company&apos;)</errorConditionFormula>
        <errorDisplayField>Source_of_PS_Scoping__c</errorDisplayField>
        <errorMessage>&apos;Source of Scoping’ must be selected when Order Line Item equals “Consulting” or “Training - In company”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Usage_Cap_or_Estimation_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>IF((ISPICKVAL(Usage_Allowance__c,&apos;Capped&apos;) &amp;&amp; (TEXT(IM_Lookup_Code__c ) &lt;&gt; &apos;Product Subscription&apos; &amp;&amp; TEXT(IM_Lookup_Code__c ) &lt;&gt; &apos;Units in advance&apos; &amp;&amp; TEXT(IM_Lookup_Code__c ) &lt;&gt; &apos;Units in arrears&apos;) &amp;&amp; ISNULL(Usage_Cap__c)), true, false)</errorConditionFormula>
        <errorDisplayField>Usage_Cap__c</errorDisplayField>
        <errorMessage>Please provide the usage cap or estimation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Variationorderlinecheck</fullName>
        <active>true</active>
        <description>Variation order line can not be saved without linking to original order line.</description>
        <errorConditionFormula>AND( Contract__c !=&apos;&apos;,  Contract__r.Variation_Order__c ==&apos;Yes&apos;, Original_Order_Line__c ==&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Original_Order_Line__c</errorDisplayField>
        <errorMessage>Variation order line can not be saved without linking to original order line.</errorMessage>
    </validationRules>
</CustomObject>